Enable Netlify contact form

--- a/index.html
+++ b/index.html
@@ -264,12 +264,40 @@
     </div>
 
     <!-- RIGHT -->
-    <form class="contact-form">
-      <input type="text" placeholder="Your Name" required />
-      <input type="email" placeholder="Your Email" required />
-      <textarea placeholder="Your Message"></textarea>
-      <button type="submit" class="btn primary">Send Message</button>
-    </form>
+<form
+  class="contact-form"
+  name="contact"
+  method="POST"
+  data-netlify="true"
+>
+  <!-- Required hidden field for Netlify -->
+  <input type="hidden" name="form-name" value="contact" />
+
+  <input
+    type="text"
+    name="name"
+    placeholder="Your Name"
+    required
+  />
+
+  <input
+    type="email"
+    name="email"
+    placeholder="Your Email"
+    required
+  />
+
+  <textarea
+    name="message"
+    placeholder="Your Message"
+    required
+  ></textarea>
+
+  <button type="submit" class="btn primary">
+    Send Message
+  </button>
+</form>
+
 
   </div>
 </section>
