--- a/index.html
+++ b/index.html
@@ -265,12 +265,13 @@
 
     <!-- RIGHT -->
 <form
-  class="contact-form"
   name="contact"
   method="POST"
   data-netlify="true"
+  action="/success.html"
+  class="contact-form"
 >
-  <!-- Required hidden field for Netlify -->
+  <!-- REQUIRED hidden input -->
   <input type="hidden" name="form-name" value="contact" />
 
   <input
